--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
@@ -369,7 +369,7 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_S3_AWS_CREDENTIALS_TYPE+++`
 endif::add-copy-button-to-env-var[]
 -- a|
-`default`, `static`, `system-property`, `env-variable`, `profile`, `container`, `instance-profile`, `process`, `anonymous` 
+`default`, `static`, `system-property`, `env-variable`, `profile`, `container`, `instance-profile`, `process`, `custom`, `anonymous` 
 |`default`
 
 
@@ -554,6 +554,27 @@ Environment variable: env_var_with_copy_button:+++QUARKUS_S3_AWS_CREDENTIALS_PRO
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_S3_AWS_CREDENTIALS_PROCESS_PROVIDER_COMMAND+++`
+endif::add-copy-button-to-env-var[]
+--|string 
+|
+
+
+h|[[quarkus-amazon-s3_quarkus.s3.aws.credentials.custom-provider-custom-credentials-provider-configuration]]link:#quarkus-amazon-s3_quarkus.s3.aws.credentials.custom-provider-custom-credentials-provider-configuration[Custom credentials provider configuration]
+
+h|Type
+h|Default
+
+a| [[quarkus-amazon-s3_quarkus.s3.aws.credentials.custom-provider.name]]`link:#quarkus-amazon-s3_quarkus.s3.aws.credentials.custom-provider.name[quarkus.s3.aws.credentials.custom-provider.name]`
+
+[.description]
+--
+The name of custom AwsCredentialsProvider bean.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_S3_AWS_CREDENTIALS_CUSTOM_PROVIDER_NAME+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_S3_AWS_CREDENTIALS_CUSTOM_PROVIDER_NAME+++`
 endif::add-copy-button-to-env-var[]
 --|string 
 |
