--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb.adoc
@@ -759,6 +759,22 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 
+a| [[quarkus-amazon-dynamodb_quarkus.dynamodb.sync-client.apache.tcp-keep-alive]]`link:#quarkus-amazon-dynamodb_quarkus.dynamodb.sync-client.apache.tcp-keep-alive[quarkus.dynamodb.sync-client.apache.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_DYNAMODB_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_DYNAMODB_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
+
+
 a| [[quarkus-amazon-dynamodb_quarkus.dynamodb.sync-client.apache.proxy.enabled]]`link:#quarkus-amazon-dynamodb_quarkus.dynamodb.sync-client.apache.proxy.enabled[quarkus.dynamodb.sync-client.apache.proxy.enabled]`
 
 [.description]
@@ -1048,6 +1064,22 @@ Environment variable: `+++QUARKUS_DYNAMODB_ASYNC_CLIENT_USE_IDLE_CONNECTION_REAP
 endif::add-copy-button-to-env-var[]
 --|boolean 
 |`true`
+
+
+a| [[quarkus-amazon-dynamodb_quarkus.dynamodb.async-client.tcp-keep-alive]]`link:#quarkus-amazon-dynamodb_quarkus.dynamodb.async-client.tcp-keep-alive[quarkus.dynamodb.async-client.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_DYNAMODB_ASYNC_CLIENT_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_DYNAMODB_ASYNC_CLIENT_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
 
 
 a| [[quarkus-amazon-dynamodb_quarkus.dynamodb.async-client.protocol]]`link:#quarkus-amazon-dynamodb_quarkus.dynamodb.async-client.protocol[quarkus.dynamodb.async-client.protocol]`
