--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-iam.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-iam.adoc
@@ -743,6 +743,22 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 
+a| [[quarkus-amazon-iam_quarkus.iam.sync-client.apache.tcp-keep-alive]]`link:#quarkus-amazon-iam_quarkus.iam.sync-client.apache.tcp-keep-alive[quarkus.iam.sync-client.apache.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_IAM_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_IAM_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
+
+
 a| [[quarkus-amazon-iam_quarkus.iam.sync-client.apache.proxy.enabled]]`link:#quarkus-amazon-iam_quarkus.iam.sync-client.apache.proxy.enabled[quarkus.iam.sync-client.apache.proxy.enabled]`
 
 [.description]
@@ -1032,6 +1048,22 @@ Environment variable: `+++QUARKUS_IAM_ASYNC_CLIENT_USE_IDLE_CONNECTION_REAPER+++
 endif::add-copy-button-to-env-var[]
 --|boolean 
 |`true`
+
+
+a| [[quarkus-amazon-iam_quarkus.iam.async-client.tcp-keep-alive]]`link:#quarkus-amazon-iam_quarkus.iam.async-client.tcp-keep-alive[quarkus.iam.async-client.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_IAM_ASYNC_CLIENT_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_IAM_ASYNC_CLIENT_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
 
 
 a| [[quarkus-amazon-iam_quarkus.iam.async-client.protocol]]`link:#quarkus-amazon-iam_quarkus.iam.async-client.protocol[quarkus.iam.async-client.protocol]`
