--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
@@ -873,6 +873,22 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 
+a| [[quarkus-amazon-s3_quarkus.s3.sync-client.apache.tcp-keep-alive]]`link:#quarkus-amazon-s3_quarkus.s3.sync-client.apache.tcp-keep-alive[quarkus.s3.sync-client.apache.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_S3_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_S3_SYNC_CLIENT_APACHE_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
+
+
 a| [[quarkus-amazon-s3_quarkus.s3.sync-client.apache.proxy.enabled]]`link:#quarkus-amazon-s3_quarkus.s3.sync-client.apache.proxy.enabled[quarkus.s3.sync-client.apache.proxy.enabled]`
 
 [.description]
@@ -1162,6 +1178,22 @@ Environment variable: `+++QUARKUS_S3_ASYNC_CLIENT_USE_IDLE_CONNECTION_REAPER+++`
 endif::add-copy-button-to-env-var[]
 --|boolean 
 |`true`
+
+
+a| [[quarkus-amazon-s3_quarkus.s3.async-client.tcp-keep-alive]]`link:#quarkus-amazon-s3_quarkus.s3.async-client.tcp-keep-alive[quarkus.s3.async-client.tcp-keep-alive]`
+
+[.description]
+--
+Configure whether to enable or disable TCP KeepAlive.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_S3_ASYNC_CLIENT_TCP_KEEP_ALIVE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_S3_ASYNC_CLIENT_TCP_KEEP_ALIVE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
 
 
 a| [[quarkus-amazon-s3_quarkus.s3.async-client.protocol]]`link:#quarkus-amazon-s3_quarkus.s3.async-client.protocol[quarkus.s3.async-client.protocol]`
