--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-sqs.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-sqs.adoc
@@ -95,6 +95,22 @@ endif::add-copy-button-to-env-var[]
 |`localstack`
 
 
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.queues]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.queues[quarkus.sqs.devservices.queues]`
+
+[.description]
+--
+The queues to create on startup.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_SQS_DEVSERVICES_QUEUES+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_SQS_DEVSERVICES_QUEUES+++`
+endif::add-copy-button-to-env-var[]
+--|list of string 
+|
+
+
 a|icon:lock[title=Fixed at build time] [[quarkus-amazon-sqs_quarkus.sqs.devservices.container-properties-container-properties]]`link:#quarkus-amazon-sqs_quarkus.sqs.devservices.container-properties-container-properties[quarkus.sqs.devservices.container-properties]`
 
 [.description]
