--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -544,15 +544,13 @@ public class FruitSyncService extends AbstractService {
     private DynamoDbTable<Fruit> fruitTable;
 
     @Inject
-    DynamoDbEnhancedClient dynamoEnhancedClient;
-
-    FruitSyncService() {
+    FruitSyncService(DynamoDbEnhancedClient dynamoEnhancedClient) {
         fruitTable = dynamoEnhancedClient.table(getTableName(),
             TableSchema.fromClass(Fruit.class));
     }
 
     public List<Fruit> findAll() {
-        return exampleBlockingTable.scan().items().stream().collect(Collectors.toList());
+        return fruitTable.scan().items().stream().collect(Collectors.toList());
     }
 
     public List<Fruit> add(Fruit fruit) {
