--- a/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
+++ b/docs/modules/ROOT/pages/amazon-secretsmanager.adoc
@@ -81,7 +81,7 @@ After this, the `amazon-secretsmanager` extension has been added to your `pom.xm
 
 == Creating JSON REST service
 
-In this example, we will create an application that allows us to store and retrieve parameters to and from SSM parameter store using a RESTful API.
+In this example, we will create an application that allows us to store and retrieve parameters to and from Secrets Manager store using a RESTful API.
 The example application will demonstrate the two programming models supported by the extension.
 
 Let's start with an abstract `org.acme.secretsmanager.QuarkusSecretsManagerResource` class to provide the common functionality we will need for both the synchronous and asynchrounous exposures.
@@ -130,7 +130,7 @@ public abstract class QuarkusSecretsManagerResource {
 <2> Generate a request for the credentials with the configured name
 <3> Generate a request to create a specific secret
 
-Now, we can extend the class and create the synchronous implementation in the `org.acme.ssm.QuarkusSecretsManagerSyncResource` class.
+Now, we can extend the class and create the synchronous implementation in the `org.acme.secretsmanager.QuarkusSecretsManagerSyncResource` class.
 
 [source,java]
 ----
@@ -150,7 +150,7 @@ import javax.ws.rs.core.MediaType;
 import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
 
 @Path("/sync")
-public class QuarkusSecretsManagerSyncResource extends QuarkusSsmResource {
+public class QuarkusSecretsManagerSyncResource extends QuarkusSecretsManagerResource {
 
     @Inject <1>
     SecretsManagerClient secretsManagerClient;
@@ -226,7 +226,7 @@ quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key=test-se
 <2> Localstack defaults to `us-east-1`
 <3> The `static` credentials provider lets you set the `access-key-id` and `secret-access-key` directly
 
-If you want to work with an AWS account, you can simply remove or comment out all Amazon SSM related properties. By default, the Secrets Manager client extension will use the `default` credentials provider chain that looks for credentials in this order:
+If you want to work with an AWS account, you can simply remove or comment out all Amazon  Secrets Manager related properties. By default, the Secrets Manager client extension will use the `default` credentials provider chain that looks for credentials in this order:
 
 include::./amazon-credentials.adoc[]
 
@@ -237,7 +237,7 @@ And the region from your AWS CLI profile will be used.
 === Packaging
 
 Packaging your application is as simple as `./mvnw clean package`.
-It can then be run with `java -Dparameters.path=/quarkus/is/awesome/ -jar target/quarkus-app/quarkus-run.jar`.
+It can then be run with `java  -jar target/quarkus-app/quarkus-run.jar`.
 
 With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.
 Depending on your system, that will take some time.
