--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -470,6 +470,10 @@ And add Netty HTTP client dependency to the `pom.xml`:
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>netty-nio-client</artifactId>
 </dependency>
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-netty</artifactId>
+</dependency>
 ----
 
 == DynamoDB enhanced client
