--- a/docs/modules/ROOT/pages/amazon-sns.adoc
+++ b/docs/modules/ROOT/pages/amazon-sns.adoc
@@ -857,6 +857,10 @@ And we need to add Netty HTTP client dependency to the `pom.xml`:
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>netty-nio-client</artifactId>
 </dependency>
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-netty</artifactId>
+</dependency>
 ----
 
 == Configuration Reference
