--- a/docs/modules/ROOT/pages/amazon-ssm.adoc
+++ b/docs/modules/ROOT/pages/amazon-ssm.adoc
@@ -351,6 +351,10 @@ To enable the asynchronous client, we also need to add the Netty HTTP client dep
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>netty-nio-client</artifactId>
 </dependency>
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-netty</artifactId>
+</dependency>
 ----
 
 == Configuration Reference
