--- a/docs/modules/ROOT/pages/amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/amazon-s3.adoc
@@ -491,6 +491,10 @@ And we need to add the Netty HTTP client dependency to the `pom.xml`:
     <groupId>software.amazon.awssdk</groupId>
     <artifactId>netty-nio-client</artifactId>
 </dependency>
+<dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-netty</artifactId>
+</dependency>
 ----
 
 == Configuration Reference
