--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb-enhanced.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb-enhanced.adoc
@@ -26,4 +26,21 @@ endif::add-copy-button-to-env-var[]
 --|list of string 
 |
 
+
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-dynamodb-enhanced_quarkus.dynamodbenhanced.create-table-schemas]]`link:#quarkus-amazon-dynamodb-enhanced_quarkus.dynamodbenhanced.create-table-schemas[quarkus.dynamodbenhanced.create-table-schemas]`
+
+[.description]
+--
+Whether a `TableSchema` should be created at start up classes that has been annotated with DynamoDb enhanced client annotations 
+`TableSchema` are cached and can be retrieved later with `TableSchema.fromClass()`
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_DYNAMODBENHANCED_CREATE_TABLE_SCHEMAS+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_DYNAMODBENHANCED_CREATE_TABLE_SCHEMAS+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`true`
+
 |===
