Update S3 doc to reflect changes in quickstart

--- a/docs/modules/ROOT/pages/amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/amazon-s3.adoc
@@ -228,6 +228,7 @@ package org.acme.s3;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+
 import jakarta.inject.Inject;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.GET;
@@ -238,7 +239,6 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.Response.ResponseBuilder;
 import jakarta.ws.rs.core.Response.Status;
-import org.jboss.resteasy.reactive.MultipartForm;
 import software.amazon.awssdk.core.ResponseBytes;
 import software.amazon.awssdk.core.sync.RequestBody;
 import software.amazon.awssdk.services.s3.S3Client;
@@ -255,7 +255,7 @@ public class S3SyncClientResource extends CommonResource {
     @POST
     @Path("upload")
     @Consumes(MediaType.MULTIPART_FORM_DATA)
-    public Response uploadFile(@MultipartForm FormData formData) throws Exception {
+    public Response uploadFile(FormData formData) throws Exception {
 
         if (formData.filename == null || formData.filename.isEmpty()) {
             return Response.status(Status.BAD_REQUEST).build();
@@ -398,10 +398,12 @@ Create a `org.acme.s3.S3AsyncClientResource` that will be similar to our `S3Sync
 ----
 package org.acme.s3;
 
-import io.smallrye.mutiny.Uni;
+import java.nio.ByteBuffer;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+
 import jakarta.inject.Inject;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.GET;
@@ -411,7 +413,14 @@ import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.Response.Status;
-import org.jboss.resteasy.reactive.MultipartForm;
+import mutiny.zero.flow.adapters.AdaptersToFlow;
+
+import org.jboss.resteasy.reactive.RestMulti;
+import org.reactivestreams.Publisher;
+
+import io.smallrye.mutiny.Multi;
+import io.smallrye.mutiny.Uni;
+import io.vertx.core.buffer.Buffer;
 import software.amazon.awssdk.core.async.AsyncRequestBody;
 import software.amazon.awssdk.core.async.AsyncResponseTransformer;
 import software.amazon.awssdk.services.s3.S3AsyncClient;
@@ -426,7 +435,7 @@ public class S3AsyncClientResource extends CommonResource {
     @POST
     @Path("upload")
     @Consumes(MediaType.MULTIPART_FORM_DATA)
-    public Uni<Response> uploadFile(@MultipartForm FormData formData) throws Exception {
+    public Uni<Response> uploadFile(FormData formData) throws Exception {
 
         if (formData.filename == null || formData.filename.isEmpty()) {
             return Uni.createFrom().item(Response.status(Status.BAD_REQUEST).build());
@@ -450,17 +459,18 @@ public class S3AsyncClientResource extends CommonResource {
     @GET
     @Path("download/{objectKey}")
     @Produces(MediaType.APPLICATION_OCTET_STREAM)
-    public Uni<Response> downloadFile(String objectKey) {
-        return Uni.createFrom()
-                .completionStage(() -> s3.getObject(buildGetRequest(objectKey), AsyncResponseTransformer.toBytes()))
-                .onItem()
-                .transform(object -> Response.ok(object.asUtf8String())
-                        .header("Content-Disposition", "attachment;filename=" + objectKey)
-                        .header("Content-Type", object.response().contentType()).build());
+    public RestMulti<Buffer> downloadFile(String objectKey) {
+
+        return RestMulti.fromUniResponse(Uni.createFrom()
+                .completionStage(() -> s3.getObject(buildGetRequest(objectKey),
+                        AsyncResponseTransformer.toPublisher())),
+                response -> Multi.createFrom().safePublisher(AdaptersToFlow.publisher((Publisher<ByteBuffer>) response))
+                        .map(S3AsyncClientResource::toBuffer),
+                response -> Map.of("Content-Disposition", List.of("attachment;filename=" + objectKey), "Content-Type",
+                        List.of(response.response().contentType())));
     }
 
     @GET
-    @Produces(MediaType.APPLICATION_JSON)
     public Uni<List<FileObject>> listFiles() {
         ListObjectsRequest listRequest = ListObjectsRequest.builder()
                 .bucket(bucketName)
@@ -468,6 +478,12 @@ public class S3AsyncClientResource extends CommonResource {
 
         return Uni.createFrom().completionStage(() -> s3.listObjects(listRequest))
                 .onItem().transform(result -> toFileItems(result));
+    }
+
+    private static Buffer toBuffer(ByteBuffer bytebuffer) {
+        byte[] result = new byte[bytebuffer.remaining()];
+        bytebuffer.get(result);
+        return Buffer.buffer(result);
     }
 
     private List<FileObject> toFileItems(ListObjectsResponse objects) {
